--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -12,5 +12,5 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        port: 22
+        port: ${{ secrets.PORT }}
         script: whoami
